apps/devx-checker/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devx-checker-svc
  labels:
    app: devx-checker
spec:
  type: ClusterIP
  selector:
    app: devx-checker
  ports:
    - port: 80
      targetPort: 3000
